Fix overflow of all buttons

--- a/src/components/toolbox/buttons/css/size.css
+++ b/src/components/toolbox/buttons/css/size.css
@@ -2,4 +2,6 @@
 
 .button {
   @mixin buttonBasics;
+
+  width: auto;
 }
